kubernetes/smoke/gateway/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-public
---
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-smoke
